networkpolicy/networkpolicy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: netpolicy1
  labels:
    demo: networkpolicies

---
apiVersion: v1
kind: Namespace
metadata:
  name: netpolicy2
  labels:
    demo: networkpolicies

---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: netpolicy
  name: podnetpol1
  namespace: netpolicy1
spec:
  containers:
    - image: praqma/network-multitool
      name: busybox

---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: netpolicy
  name: podnetpol2
  namespace: netpolicy2
spec:
  containers:
    - image: praqma/network-multitool
      name: busybox

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: netpolicy1
spec:
  podSelector:
    matchLabels:
      app: netpolicy
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.233.64.0/18
            except:
              - 10.233.74.0/24
        - namespaceSelector:
            matchLabels:
              demo: networkpolicies
        - podSelector:
            matchLabels:
              app: netpolicy
      ports:
        - protocol: TCP
          port: 80
          endPort: 82
  egress:
    - to:
        - ipBlock:
            cidr: 10.233.64.0/18
            except:
              - 10.233.97.112/32
      ports:
        - protocol: TCP
          port: 443
